dist/1.0/bin/sample/retrieveUnpackaged/objects/Sales_Type_Configuration__c.object
<CustomObject>
    <description>Object used to define default Sales Type values for particular Lines of Business</description>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>Line of Business for which given Sales Type should be applied</description>
        <inlineHelpText>Line of Business for which given Sales Type should be applied</inlineHelpText>
        <label>Line of Business</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Sales Type Configuration</relationshipLabel>
        <relationshipName>Sales_Type_Configuration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <description>Type, that should be applied for given LOB</description>
        <inlineHelpText>Type, that should be applied for given LOB</inlineHelpText>
        <label>Sales Type</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RT*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WS*</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <description>Relation to User, for whom given Sales Type is configured</description>
        <inlineHelpText>Relation to User, for whom given Sales Type is configured</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Type_Configuration</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Type Configuration</label>
    <nameField>
        <displayFormat>STC{000000000}</displayFormat>
        <label>Configuration ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Type Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>